welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: not found: value sortietrouvée
while (!sortietrouvée) {
        ^